# Cloud_Cost_Optimization

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  check_structure.py  cleanup.py  debug_reports.py  move_data.py  pyproject.toml  run_test.py  setup.py  test_visualizations.py
data/: My Billing Account_Cost Breakdown, 2024-10-01 – 2024-10-31.csv  My Billing Account_Cost table, 2024-10-01 — 2024-10-31.csv  My Billing Account_Reports, 2024-11-01 — 2024-11-18.csv
reports/Dashboard/: index.html
reports/Dashboard/css/: styles.css
reports/Dashboard/data/: dashboard_data.json
reports/Dashboard/js/: dashboard.js
scripts/: generate_dashboard.py
src/cloud_cost_optimizer/: __init__.py  main.py  orchestrator.py
src/cloud_cost_optimizer/api/: api_client.py
src/cloud_cost_optimizer/automation/: action_executor.py
src/cloud_cost_optimizer/config/: settings.py
src/cloud_cost_optimizer/data/processors/: billing_data_processor.py
src/cloud_cost_optimizer/monitoring/: real_time_monitor.py
src/cloud_cost_optimizer/optimization/: recommendation_engine.py
src/cloud_cost_optimizer/services/: cost_optimizer.py
src/cloud_cost_optimizer/visualizations/: cost_visualizer.py  dashboard.js
tests/: test_analysis.py  test_optimizer.py
