[tool.poetry]
name = "cloud-cost-optimizer"
version = "0.1.0"
description = "AI-powered cloud cost optimization solution"
authors = ["abhishek <"abhishek.pathak@student.shu.edu">"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.2.0"
SQLAlchemy = "^2.0.0"
python-dotenv = "^1.0.0"
fastapi = "^0.100.0"
pydantic = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"